--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,12 +2,8 @@
 layout: default
 ---
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      <div class="textblock">
-        {{ content }}
-      </div>
-    </div>
+<div class="container container--small">
+  <div class="textblock">
+    {{ content }}
   </div>
 </div>
