--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,25 +2,17 @@
 layout: default
 ---
 
-<div class="container">
-
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-
-      <div class="post__image-clipper">
-        <img class="post__image" src="{{ site.imgurl }}/blog/{{ page.img }}" alt="">
-      </div>
-
-      <h1 class="post__title">{{ page.title }}</h1>
-      <span class="post__subtitle">{{ page.subtitle }}</span>
-
-      <div class="post__content">
-
-        {{ content }}
-
-      </div>
-
-    </div>
+<div class="container container--small">
+  <div class="post__image-clipper">
+    <img class="post__image" src="{{ site.imgurl }}/blog/{{ page.img }}" alt="">
   </div>
 
+  <h1 class="post__title">{{ page.title }}</h1>
+  <span class="post__subtitle">{{ page.subtitle }}</span>
+
+  <div class="post__content">
+
+    {{ content }}
+
+  </div>
 </div>
