--- a/_sass/base/_grid.scss
+++ b/_sass/base/_grid.scss
@@ -61,6 +61,15 @@
 .col-xs-12 { width: 100%; }
 
 @media all and (min-width: $media-query-tablet) {
+  .container {
+    width: $container-tablet;
+
+    &--small {
+      width: $container-tablet - 100px;
+
+    }
+  }
+
   .row {
     margin-right: -($gutter)/2;
     margin-left: -($gutter)/2;
@@ -83,9 +92,6 @@
     padding-left: 0;
   }
 
-
-  .container { width: $container-tablet; }
-
   .col-xs-hidden { display: block; }
 
   .col-sm-1 { width: 8.333%; }
@@ -103,7 +109,13 @@
 }
 
 @media all and (min-width: $media-query-desktop) {
-  .container { width: $container-desktop; }
+  .container {
+    width: $container-desktop;
+
+    &--small {
+      width: $container-desktop - 100px;
+    }
+  }
 
   .col-sm-hidden { display: block; }
 
