--- a/_sass/base/_mixins.scss
+++ b/_sass/base/_mixins.scss
@@ -46,3 +46,14 @@
     @content;
   }
 }
+
+@mixin gradient($color1, $color2) {
+    background: $color1; /* Old browsers */
+    background: -moz-linear-gradient(45deg, $color1 0%, $color2 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,$color1), color-stop(100%,$color2)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(45deg, $color1 0%,$color2 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(45deg, $color1 0%,$color2 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(45deg, $color1 0%,$color2 100%); /* IE10+ */
+    background: linear-gradient(45deg, $color1 0%,$color2 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$color1', endColorstr='$color2',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
