--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -7,7 +7,7 @@ $-footer-height: 75px;
     position: absolute;
     width: 100%;
     height: $-footer-height;
-    margin-top: 50px;
+    margin: 0;
     padding: 25px;
     bottom: 0;
     left: 0;
