project page ok-ish

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 <div class="container container--small">
+  <img src="{{ site.imgurl }}/about-img.jpg" alt="" class="about-img">
+
   <div class="textblock">
     {{ content }}
   </div>
