--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,8 @@
         "base/utils";
 
 @import "modules/icons",
-        "modules/typography";
+        "modules/typography",
+        "modules/layout";
 
 @import "partials/home",
         "partials/header",
