--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 
     {% include header.html %}
 
-    <div class="js-page-wrapper page-wrapper page-wrapper--{{ page.title | slugify }}">
-      <section class="js-section section section--{{ page.title | slugify }}">
+    <div class="js-page-wrapper page-wrapper page-wrapper--{{ page.title | slugify }} page-wrapper--{{ page.type | slugify }}">
+      <section class="js-section section section--{{ page.title | slugify }} section--{{ page.type | slugify }}">
 
       {{ content }}
 
