--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   <h1 class="post__title">{{ page.title }}</h1>
   <span class="post__subtitle">{{ page.subtitle }}</span>
 
-  <div class="post__content">
+  <div class="post__content textblock">
 
     {{ content }}
 
