--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,28 +2,41 @@
 layout: default
 ---
 
-<div class="container-fluid">
-  <div class="cover">
-    <div class="aligner">
-      <h1 class="cover__title">{{ page.title }}</h1>
+<div class="cover js-project-cover">
 
-      <div class="cover__image-clipper">
-        <img class="cover__image" src="{{ site.imgurl}}/projects/{{ page.project-img }}" alt="">
-      </div>
+  <div class="cover__info">
+    <div class="container">
+      <h1 class="cover__title">{{ page.title }}</h1>
+      <p class="cover__subtitle">{{ page.subtitle }}</p>
     </div>
+  </div>
+
+  <div class="cover__image-clipper js-project-cover-img">
+    <img class="cover__image" src="{{ site.imgurl}}/projects/{{ page.project-img }}" alt="">
   </div>
 </div>
 
 <div class="container">
   <div class="row">
+    <div class="col-sm-9">
+      <p class="project__intro">{{ page.intro }}</p>
+
+      <div class="project__content textblock">
+
+        {{ content }}
+
+      </div>
+    </div>
+
     <div class="col-sm-3">
-      <div class="tech-specs">
+      <div class="tech-specs js-tech-specs">
         <h3 class="tech-specs__title">{{ site.data.project.[page.lang].tech-specs }}</h3>
         <h4 class="tech-specs__title tech-specs__title--small">{{ site.data.project.[page.lang].project-link }}</h4>
-        <a class="tech-specs__text" href="{{ page.project-link }}" title="{{ page.project }}" target="_blank" >{{ page.project }}</a>
+        <a class="tech-specs__link" href="{{ page.project-link }}" title="{{ page.project }}" target="_blank" >{{ page.project }}</a>
+        <a class="tech-specs__link" href="{{ page.project-link-2 }}" title="{{ page.project-2 }}" target="_blank" >{{ page.project-2 }}</a>
 
         <h4 class="tech-specs__title tech-specs__title--small">{{ site.data.project.[page.lang].client }}</h4>
-        <span class="tech-specs__text">{{ page.client }}</span>
+        <a class="tech-specs__link" href="{{ page.client-link }}" title="{{ page.client }}" target="_blank">{{ page.client }}</a>
 
         <h4 class="tech-specs__title tech-specs__title--small">{{ site.data.project.[page.lang].year }}</h4>
         <span class="tech-specs__text">{{ page.year }}</span>
@@ -34,29 +47,23 @@ layout: default
         <h4 class="tech-specs__title tech-specs__title--small">{{ site.data.project.[page.lang].platforms }}</h4>
         <div class="tech-specs__icon-group">
           {% for icon in page.icons %}
-          <span class="tech-specs__icon icon icon--{{ icon.icon-name }}" title="{{ icon.icon-name }}"></span>
+          <span class="tech-specs__icon icon icon--{{ icon.icon-name }}"></span>
           {% endfor %}
         </div>
 
         <h4 class="tech-specs__title tech-specs__title--small">{{ site.data.project.[page.lang].techs }}</h4>
         <div class="tech-specs__text-group tech-specs__text-group--comma-separation">
           {% for tech in page.techs %}
-          <span class="tech-specs__text">{{ tech.tech-name }}</span>
+          <span class="tech-specs__text tech-specs__text--comma">{{ tech.tech-name }}</span>
           {% endfor %}
         </div>
-      </div>
-    </div>
 
-    <div class="col-sm-9">
-      <h1 class="project__title">{{ page.title }}</h1>
-      <p class="project__subtitle">{{ page.subtitle }}</p>
-
-      <p class="project__text project__text--intro">{{ page.intro }}</p>
-
-      <div class="project__content">
-
-        {{ content }}
-
+        <h4 class="tech-specs__title tech-specs__title--small">{{ site.data.project.[page.lang].support }}</h4>
+        <div class="tech-specs__icon-group">
+          {% for browser in page.browsers %}
+          <span class="tech-specs__icon icon icon--{{ browser.browser-name }}"></span>
+          {% endfor %}
+        </div>
       </div>
     </div>
 
