--- a/_sass/base/_var-typography.scss
+++ b/_sass/base/_var-typography.scss
@@ -23,35 +23,45 @@ $font-family-base:        $font-family-sans-serif !default;
 $font-family-heading:     'effra', Helvetica, Arial, "sans serif";
 $font-family-text:        $font-family-sans-serif;
 
-$font-size-base: 14px;
+$font-size-base: 20px;
 
 $font-size-headline: 42px;
-$font-size-title: 18px;
-$font-size-subtitle: 16px;
-$font-size-link: 14px;
+$font-size-title: 28px;
+$font-size-title-medium: 24px;
+$font-size-title-small: 20px;
+$font-size-subtitle: 22px;
+
+
+$font-size-dropcap: 36px;
 $font-size-text: $font-size-base;
+$font-size-link: $font-size-base;
+
 $font-size-table: 13px;
 $font-size-sublink: 13px;
-$font-size-legend: 13px;
+$font-size-legend: 16px;
 $font-size-small: 9px;
 
 
-$font-size-icon: 14px;
+$font-size-icon: 18px;
 $font-size-icon-big: 24px;
 
-$font-lh-headline: $font-size-headline * 1.4;
-$font-lh-title: $font-size-title * 1.4;
-$font-lh-subtitle: $font-size-subtitle * 1.4;
-$font-lh-link: $font-size-link * 1.4;
-$font-lh-text: $font-size-text * 1.4;
-$font-lh-table: $font-size-table * 1.4;
-$font-lh-sublink: $font-size-sublink * 1.4;
-$font-lh-legend: $font-size-legend * 1.4;
-$font-lh-small: $font-size-small * 1.4;
+$lh-headline: $font-size-headline * 1;
+$lh-title: $font-size-title * 1.4;
+$lh-subtitle: $font-size-subtitle * 1.4;
+
+
+$lh-dropcap: $font-size-dropcap * 1-.1;
+$lh-link: $font-size-link * 1.4;
+$lh-text: $font-size-text * 1.4;
+
+$lh-table: $font-size-table * 1.4;
+$lh-sublink: $font-size-sublink * 1.4;
+$lh-legend: $font-size-legend * 1.4;
+$lh-small: $font-size-small * 1.4;
 
 
 // Hr border color
-$hr: 1px $c-orange solid;
+$hr: 1px $c-yellow-l1 solid;
 $hr-neg: 1px $c-white solid;
 $hr-dark: 1px $c-gray-l2 solid;
 
