--- a/_sass/modules/_icons.scss
+++ b/_sass/modules/_icons.scss
@@ -74,7 +74,7 @@
 	// Browsers
 	&--safari:before {	content: "\e62e"; }
 	&--opera:before {	content: "\e62f"; }
-	&--IE:before {	content: "\e630"; }
+	&--ie:before {	content: "\e630"; }
 	&--firefox:before {	content: "\e631"; }
 	&--chrome:before {	content: "\e632"; }
 
