--- a/_sass/partials/_project.scss
+++ b/_sass/partials/_project.scss
@@ -1,173 +1,180 @@
 .cover {
+    position: relative;
+    display: block;
+    height: 100%;
+    margin: 0 0 60px;
+
+    overflow: hidden;
+    z-index: $z-back;
+
+    @include clearfix();
+
+    &--scrolled {
+        .cover {
+          &__image {
+            opacity: 0.25;
+          }
+
+          &__title { opacity: 0.25; }
+
+          &__subtitle { opacity: 0.25; }
+        }
+    }
+
     &__image-clipper {
-        position: relative;
+        position: absolute;
         width: 100%;
         height: auto;
-        max-height: 400px;
-        margin: 0 0 60px;
 
         overflow: hidden;
+        @include gradient ($c-orange, $c-yellow);
     }
 
     &__image {
-        width: 100%;
-        height: auto;
+        position: relative;
+        width: auto;
+        min-width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+
+        z-index: $z-back;
+        transition: opacity ease 0.9s;
+    }
+
+    &__info {
+      text-align: center;
+
+      position: absolute;
+      display: block;
+      width: 100%;
+      top: 50%;
+
+      z-index: $z-mid-back;
+      transform: translateY(-50%);
     }
 
     &__title {
-        font-size: 48px;
+        font-size: $font-size-headline * 3;
+        font-family: $font-family-heading;
+        line-height: 0.9;
+
+        margin: 0;
+
+        color: $c-white;
+        text-shadow: 0 5px 0 $c-shadow-l2;
+        transform: translateY(0);
+        transition: opacity ease 0.9s;
+    }
+
+    &__subtitle {
+        font-size: $font-size-headline;
+        font-family: $font-family-text;
+        font-style: italic;
+
+        margin: 0;
+
+        color: $c-white;
+        text-shadow: 0 5px 0 $c-shadow-l2;
+        transform: translateY(0);
+        transition: opacity ease 0.9s 0.05s;
     }
 }
 
 .project {
-    &__title {
-        font-size: 32px;
-    }
-
-    &__subtitle {
-
-    }
-
-    &__text {
-        &--intro {
-
-        }
+    &__intro {
+      margin: 0;
     }
 
     &__content {
-        h2 {
-            font-size: 28px;
-
-            margin: 0 0 20px;
-
-            color: $c-black;
-        }
-
-        h3 {
-            font-size: 24px;
-
-            margin: 0 0 10px;
-
-            color: $c-black;
-        }
-
-        h4 {
-            font-size: 22px;
-
-            margin: 0 0 10px;
-
-            color: $c-gray-d1;
-        }
-
-        h5 {
-            font-size: 18px;
-
-            margin: 0 0 10px;
-
-            color: $c-gray-d1;
-        }
-
-        h6 {
-            font-size: 16px;
-
-            margin: 0 0 10px;
-
-            color: $c-gray-d1;
-        }
-
-        p, span {
-            font-size: 18px;
-            font-family: $font-family-sans-serif;
-            font-weight: 300;
-
-            margin: 0 0 20px;
-
-            color: $c-black;
-        }
-
-        small {
-            font-size: 14px;
-            font-family: $font-family-sans-serif;
-            font-weight: 300;
-        }
-
-        a {
-            font-size: 18px;
-            font-family: $font-family-sans-serif;
-            font-weight: 300;
-
-            color: $c-yellow;
-            transition: color ease 0.25s;
-
-            &:hover { color: $c-yellow-d1; }
-        }
-
-        ul {
-            font-size: 18px;
-            font-family: $font-family-sans-serif;
-            font-weight: 300;
-            font-style: italic;
-            list-style-type: none;
-
-            margin: 0 0 20px;
-            padding-left: $em-space;
-
-            color: $c-black;
-        }
-
-        li {
-            &:before {
-                content: "•";
-
-                margin: 0 $em-space 0 0;
-
-                color: $c-yellow;
-            }
-        }
+      margin: 0 0 60px;
     }
 }
 
 .tech-specs {
+    position: relative;
+    display: block;
     margin: 0 0 30px;
-    padding: 15px 15px 25px;
+    padding: $gutter/2 $gutter/2 $gutter;
 
-    background: $c-gray-l3;
     color: $c-yellow;
+    border: $hr;
 
     &__title {
         font-size: 20px;
         font-family: $font-family-heading;
         letter-spacing: 0.5px;
 
-        margin: 15px 0 5px;
+        margin: 0 0 15px;
 
         color: $c-yellow;
 
         &--small {
             font-size: 16px;
 
+            margin: 0;
+
             color: $c-gray-d1;
         }
     }
 
     &__text-group--comma-separation {
+      display: block;
+      margin: 0 0 10px;
+
         .tech-specs__text:after { content: ","; }
         .tech-specs__text:last-child:after { content: ""; }
     }
 
-    &__text {
-        font-family: $font-family-sans-serif;
+    &__text,
+    &__link {
+        font-family: $font-family-text;
 
-        margin: 0;
+        display: inline-block;
+        margin: 0 0 10px;
 
         color: $c-gray;
     }
 
-    &__icon-group { margin: 5px 0 0; }
+    &__text--comma { display: inline; }
+
+    &__link {
+      display: block;
+      transition: color ease 0.25s;
+
+      @include hoverActiveFocus {
+        color: $c-yellow;
+      }
+    }
+
+    &__icon-group { margin: 5px 0 10px; }
 
     &__icon {
-        font-size: 22px;
+        font-size: $font-size-icon;
+
+        margin: 0 5px 0 0;
 
         color: $c-yellow;
+
+        &:last-child { margin: 0; }
+    }
+}
+
+@media (min-width: $media-query-tablet) {
+  .tech-specs {
+      &--fixed {
+          position: fixed;
+          display: block;
+          width: 166px;
+          top: $header-cont-height-comp * 2;
+        }
+    }
+}
+
+@media (min-width: $media-query-tablet) {
+  .tech-specs {
+      &--fixed {
+          width: 220px;
+        }
     }
 }
