--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -12,7 +12,7 @@ layout: default
   </div>
 
   <div class="cover__image-clipper js-project-cover-img">
-    <img class="cover__image" src="{{ site.imgurl}}/projects/{{ page.project-img }}" alt="">
+    <img class="cover__image" src="{{ site.imgurl}}/projects/{{ page.project-img }}" alt="{{ page.title }} | {{ page.subtitle }}">
   </div>
 </div>
 
