reviewing header functions in responsive mode

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     </a>
 
     <ul class="footer__list">
-      <div class="footer__languages">
+      <!-- <div class="footer__languages">
         {% assign language = site.posts | where:"name", page.name | sort: 'path' %}
 
         {% for post in language %}
@@ -12,7 +12,7 @@
           <a class="footer__item-link footer__item-link footer__languages__item-link footer__languages__item-link--{{ post.lang }}" href="{{ post.url }}">{{ post.lang }}</a>
         </li>
         {% endfor %}
-      </div>
+      </div> -->
 
       <li class="footer__item">
         <a class="footer__item-link footer__item-link footer__icon icon icon--facebook" href="{{ site.data.strings.facebook }}" target='_blank' ></a>
