reordered css structure

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="container container--small">
-  <img src="{{ site.imgurl }}/about-img.jpg" alt="" class="about-img">
+  <img src="{{ site.imgurl }}/about-img.jpg" alt="" class="general-img">
 
   <div class="textblock">
     {{ content }}
