--- a/_sass/base/_var-layout.scss
+++ b/_sass/base/_var-layout.scss
@@ -18,3 +18,7 @@ $z-mid: 3;
 $z-mid-back: 2;
 $z-back: 1;
 $z-back-negative: -1;
+
+// animations
+// ----------
+$anim-bounce: cubic-bezier(0.800, -0.375, 0.275, 1.455);
