--- a/_sass/base/_var-typography.scss
+++ b/_sass/base/_var-typography.scss
@@ -22,15 +22,16 @@ $font-family-base:        $font-family-sans-serif !default;
 
 $font-family-heading:     'effra', Helvetica, Arial, "sans serif";
 $font-family-text:        $font-family-sans-serif;
+$font-family-icon:  'icomoon';
+
 
 $font-size-base: 20px;
 
 $font-size-headline: 42px;
-$font-size-title: 28px;
+$font-size-title-big: 28px;
 $font-size-title-medium: 24px;
 $font-size-title-small: 20px;
 $font-size-subtitle: 22px;
-
 
 $font-size-dropcap: 36px;
 $font-size-text: $font-size-base;
@@ -46,9 +47,8 @@ $font-size-icon: 18px;
 $font-size-icon-big: 24px;
 
 $lh-headline: $font-size-headline * 1;
-$lh-title: $font-size-title * 1.4;
+$lh-title: $font-size-title-big * 1.4;
 $lh-subtitle: $font-size-subtitle * 1.4;
-
 
 $lh-dropcap: $font-size-dropcap * 1-.1;
 $lh-link: $font-size-link * 1.4;
@@ -71,21 +71,3 @@ $hr-dark: 1px $c-gray-l2 solid;
 
 $em-space: $font-size-base;
 $en-space: $em-space/2;
-
-// general tag adjustments
-// --------------------------------------------------
-
-body { font-kerning: normal; }
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: $font-family-heading;
-    font-weight: 600;
-}
-
-p, span, small { font-family: $font-family-text; }
-
-button {
-  border: none;
-  box-shadow: none;
-  outline: none;
-}
