--- a/_sass/partials/_header.scss
+++ b/_sass/partials/_header.scss
@@ -8,8 +8,8 @@ $header-cont-height-comp: 36px;
 	width: 100%;
 	padding: 15px;
 
-	box-shadow: 0 0 transparent;
-	background: $c-light-l2;
+	box-shadow: 0 5px 0 $c-shadow-l2;
+	background: $c-white;
 	z-index: $z-mid-front;
 	transition: padding $anim-bounce 0.25s,
 							background ease 0.5s,
@@ -33,12 +33,6 @@ $header-cont-height-comp: 36px;
 			display: none;
 			float: right;
 		}
-
-		&--compressed {
-			line-height: $header-cont-height-comp;
-
-			height: $header-cont-height-comp;
-		}
 	}
 
 	&__item {
@@ -48,7 +42,7 @@ $header-cont-height-comp: 36px;
 		@include clearfix();
 	}
 
-	&__item-link {
+	&__link {
 		font-size: 14px;
 		font-family: $font-family-heading;
 		font-weight: 600;
@@ -58,7 +52,6 @@ $header-cont-height-comp: 36px;
 
 		display: block;
 		height: $header-cont-height;
-		margin: 0 10px 0 0;
 		padding: 0 0 0 10px;
 
 		color: $c-yellow-l1;
@@ -66,12 +59,6 @@ $header-cont-height-comp: 36px;
 								line-height $anim-bounce 0.25s;
 
 		&:hover { color: $c-yellow; }
-
-		&--compressed {
-			line-height: $header-cont-height-comp;
-
-			height: $header-cont-height-comp;
-		}
 
 		&--active {
 			color: $c-yellow;
@@ -92,22 +79,9 @@ $header-cont-height-comp: 36px;
 		transition: width $anim-bounce 0.25s,
 								height $anim-bounce 0.25s,
 								padding $anim-bounce 0.25s;
-
-		&--compressed {
-			width: $header-cont-height-comp;
-			height: $header-cont-height-comp;
-			padding: 6px;
-		}
 	}
 
 	&__icon { font-size: 18px; }
-
-	&--compressed {
-		padding: 10px 15px;
-
-		background: $c-white;
-		box-shadow: 0 5px 0 $c-shadow-l2;
-	}
 }
 
 .languages {
@@ -128,8 +102,36 @@ $header-cont-height-comp: 36px;
 
 @media (min-width: $media-query-tablet) {
 	.header {
+		background: $c-light-l2;
+		box-shadow: 0 0 transparent;
+
 		&__list--right { display: inline-block; }
 
 		&__item-link { font-size: 16px; }
+
+		&__brand--compressed {
+			width: $header-cont-height-comp;
+			height: $header-cont-height-comp;
+			padding: 6px;
+		}
+
+		&__list--compressed {
+			line-height: $header-cont-height-comp;
+
+			height: $header-cont-height-comp;
+		}
+
+		&__link--compressed {
+			line-height: $header-cont-height-comp;
+
+			height: $header-cont-height-comp;
+		}
+
+		&--compressed {
+			padding: 10px 15px;
+
+			background: $c-white;
+			box-shadow: 0 5px 0 $c-shadow-l2;
+		}
 	}
 }
