--- a/_sass/modules/_icons.scss
+++ b/_sass/modules/_icons.scss
@@ -10,7 +10,7 @@
 }
 
 [class^="icon-"], [class*=" icon-"] {
-	font-family: $font-family-icon !important;
+	font-family: $ff-icon !important;
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
