--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -11,12 +11,12 @@ html {
 body { font-kerning: normal; }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: $font-family-heading;
-    font-weight: 600;
+    font-family: $ff-heading;
+    font-weight: $fw-bold;
     text-transform: uppercase;
 }
 
-p, span, small { font-family: $font-family-text; }
+p, span, small { font-family: $ff-text; }
 
 button {
   border: none;
