--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -48,7 +48,7 @@ $-footer-height: 75px;
     }
 
     &__languages {
-        font-family: $font-family-heading;
+        font-family: $ff-heading;
         text-transform: uppercase;
 
         display: inline-block;
