--- a/_sass/partials/_home.scss
+++ b/_sass/partials/_home.scss
@@ -31,7 +31,7 @@
 
 	&__subtitle {
 		font-size: 24px;
-		font-family: $font-family-sans-serif;
+		font-family: $ff-text;
 		font-style: italic;
 
 		margin: 0;
